<resources>
    <string name="app_name">KrestikyNoliky</string>
    <string name="ob">Первыми ходят !!!</string>
    <string name="a">TODO</string>
    <string name="b">TODO</string>
    <string name="c">TODO</string>
    <string name="d">TODO</string>
    <string name="e">TODO</string>
    <string name="f">TODO</string>
    <string name="g">TODO</string>
    <string name="todo">TODO</string>
    <string name="h">TODO</string>
</resources>